fixing overlap on other dropdowns

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -653,7 +653,7 @@ html {
   opacity: 1;
 }
 
-.dropdown-menu.show {
+.nav-link + .dropdown-menu.show {
   border: none;
   top: 85%;
 }
